[package]
name = "parenchyma"
version = "0.0.3"
authors = ["Jony <jonysy@users.noreply.github.com>"]
keywords = ["backend", "computation", "opencl", "cuda", "hpc"]
categories = ["science"]
description = "A high-performance computing (HPC) framework"
documentation = "https://docs.rs/parenchyma"
repository = "https://github.com/lychee-eng/parenchyma"
license = "MIT/Apache-2.0"

[dependencies]
enum_primitive = "0.1.1"
lazy_static = "0.2.4"
libloading = "0.3.2"
log = "0.3.7"
ndarray = "0.8.0"

# [dev-dependencies]
# compiletest_rs = "0.2.5"