[package]
name = "parenchyma"
version = "0.0.4"
authors = ["Jony <jonysy@users.noreply.github.com>"]
keywords = ["backend", "computation", "opencl", "cuda", "hpc"]
categories = ["science"]
description = "A high-performance computing (HPC) framework"
documentation = "https://docs.rs/parenchyma"
repository = "https://github.com/lychee-eng/parenchyma"
license = "MIT/Apache-2.0"

[dependencies]
# enum_primitive = "0.1.1"
# futures = "0.1.11"
# libloading = "0.3.2"
log = "0.4"
ndarray = "0.10.0"
num = "0.2"
ocl = "0.16.0"

[dev-dependencies]
# compiletest_rs = "0.2.5"
lazy_static = "1.0.0"