[package]
name = "parenchyma-native"
version = "0.1.0"
authors = ["Jony <jonysy@users.noreply.github.com>"]
keywords = ["backend", "computation", "hpc"]
categories = []
license = "MIT/Apache-2.0"

[dependencies.parenchyma]
path = "../../"
version = "0.1.0"

[features]
unstable_alloc = [] # faster but unstable memory allocation on native machines